tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts
// @target: es2015
declare function dec<T>(target: T): T;

var F = @dec () => {
}